aule/generated/alfaParser.py
# Generated from alfaParser.g4 by ANTLR 4.7
# encoding: utf-8
from antlr4 import *
from io import StringIO
from typing.io import TextIO
import sys



class alfaParser ( Parser ):

    grammarFileName = "alfaParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "'<'", "'>'", "'>='", "'<='", "'=='", "'!='", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'{'", "'}'", "'['", "']'", 
                     "','", "'('", "')'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "<INVALID>", "'.'" ]

    symbolicNames = [ "<INVALID>", "SPACE", "COMMENT", "LINE_COMMENT", "LESS_THAN", 
                      "MORE_THAN", "GREAT_EQUAL", "LESS_EQUAL", "EQUALS", 
                      "NOT_EQUALS", "IN", "SUBSET", "SUBSETEQ", "OPEN_BRACE", 
                      "CLOSE_BRACE", "OPEN_BRACKET", "CLOSE_BRACKET", "COMMA", 
                      "OPEN_PAREN", "CLOSE_PAREN", "ANY", "EXPORT", "NAMESPACE", 
                      "POLICYSET", "POLICY", "RULE", "APPLY", "PEMIT_OVERRIDES", 
                      "DENY_OVERRIDES", "FIRST_APPLICABLE", "PERMIT_UNLESS_DENY", 
                      "DENY_UNLESS_PERMIT", "ONLY_ONE_APPLICABLE", "TARGET", 
                      "TRUE", "FALSE", "CLAUSE", "CONDITION", "OBLIGATION", 
                      "ADVICE", "PERMIT", "DENY", "ON", "OR", "AND", "NOT", 
                      "DOT", "STRING", "ID", "INT", "ERROR" ]

    RULE_root = 0
    RULE_nameSpaceDeclaration = 1
    RULE_nameSpaceBody = 2
    RULE_policySetDeclaration = 3
    RULE_policySetBody = 4
    RULE_policyDeclaration = 5
    RULE_applyStatement = 6
    RULE_ruleDeclaration = 7
    RULE_effectStatement = 8
    RULE_targetStatement = 9
    RULE_conditionStatement = 10
    RULE_targetExpression = 11
    RULE_conditionExpression = 12
    RULE_event = 13
    RULE_eventBody = 14
    RULE_obligation = 15
    RULE_advice = 16
    RULE_unaryOperator = 17
    RULE_binaryOperator = 18
    RULE_callExpression = 19
    RULE_arguments = 20
    RULE_anyExpression = 21
    RULE_attributeAccessExpression = 22
    RULE_attributeValue = 23
    RULE_arrayExpression = 24
    RULE_literal = 25
    RULE_boolean_literal = 26

    ruleNames =  [ "root", "nameSpaceDeclaration", "nameSpaceBody", "policySetDeclaration", 
                   "policySetBody", "policyDeclaration", "applyStatement", 
                   "ruleDeclaration", "effectStatement", "targetStatement", 
                   "conditionStatement", "targetExpression", "conditionExpression", 
                   "event", "eventBody", "obligation", "advice", "unaryOperator", 
                   "binaryOperator", "callExpression", "arguments", "anyExpression", 
                   "attributeAccessExpression", "attributeValue", "arrayExpression", 
                   "literal", "boolean_literal" ]

    EOF = Token.EOF
    SPACE=1
    COMMENT=2
    LINE_COMMENT=3
    LESS_THAN=4
    MORE_THAN=5
    GREAT_EQUAL=6
    LESS_EQUAL=7
    EQUALS=8
    NOT_EQUALS=9
    IN=10
    SUBSET=11
    SUBSETEQ=12
    OPEN_BRACE=13
    CLOSE_BRACE=14
    OPEN_BRACKET=15
    CLOSE_BRACKET=16
    COMMA=17
    OPEN_PAREN=18
    CLOSE_PAREN=19
    ANY=20
    EXPORT=21
    NAMESPACE=22
    POLICYSET=23
    POLICY=24
    RULE=25
    APPLY=26
    PEMIT_OVERRIDES=27
    DENY_OVERRIDES=28
    FIRST_APPLICABLE=29
    PERMIT_UNLESS_DENY=30
    DENY_UNLESS_PERMIT=31
    ONLY_ONE_APPLICABLE=32
    TARGET=33
    TRUE=34
    FALSE=35
    CLAUSE=36
    CONDITION=37
    OBLIGATION=38
    ADVICE=39
    PERMIT=40
    DENY=41
    ON=42
    OR=43
    AND=44
    NOT=45
    DOT=46
    STRING=47
    ID=48
    INT=49
    ERROR=50

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.7")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None



    class RootContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(alfaParser.EOF, 0)

        def nameSpaceDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.NameSpaceDeclarationContext)
            else:
                return self.getTypedRuleContext(alfaParser.NameSpaceDeclarationContext,i)


        def getRuleIndex(self):
            return alfaParser.RULE_root

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRoot" ):
                listener.enterRoot(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRoot" ):
                listener.exitRoot(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRoot" ):
                return visitor.visitRoot(self)
            else:
                return visitor.visitChildren(self)




    def root(self):

        localctx = alfaParser.RootContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_root)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 57
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==alfaParser.NAMESPACE:
                self.state = 54
                self.nameSpaceDeclaration()
                self.state = 59
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 60
            self.match(alfaParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameSpaceDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.nameSpaceId = None # Token

        def NAMESPACE(self):
            return self.getToken(alfaParser.NAMESPACE, 0)

        def ID(self):
            return self.getToken(alfaParser.ID, 0)

        def nameSpaceBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.NameSpaceBodyContext)
            else:
                return self.getTypedRuleContext(alfaParser.NameSpaceBodyContext,i)


        def getRuleIndex(self):
            return alfaParser.RULE_nameSpaceDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameSpaceDeclaration" ):
                listener.enterNameSpaceDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameSpaceDeclaration" ):
                listener.exitNameSpaceDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameSpaceDeclaration" ):
                return visitor.visitNameSpaceDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def nameSpaceDeclaration(self):

        localctx = alfaParser.NameSpaceDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_nameSpaceDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 62
            self.match(alfaParser.NAMESPACE)
            self.state = 63
            localctx.nameSpaceId = self.match(alfaParser.ID)
            self.state = 64
            self.match(alfaParser.OPEN_BRACE)
            self.state = 68
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << alfaParser.EXPORT) | (1 << alfaParser.NAMESPACE) | (1 << alfaParser.POLICYSET) | (1 << alfaParser.POLICY))) != 0):
                self.state = 65
                self.nameSpaceBody()
                self.state = 70
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 71
            self.match(alfaParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class NameSpaceBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def policySetDeclaration(self):
            return self.getTypedRuleContext(alfaParser.PolicySetDeclarationContext,0)


        def policyDeclaration(self):
            return self.getTypedRuleContext(alfaParser.PolicyDeclarationContext,0)


        def nameSpaceDeclaration(self):
            return self.getTypedRuleContext(alfaParser.NameSpaceDeclarationContext,0)


        def getRuleIndex(self):
            return alfaParser.RULE_nameSpaceBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterNameSpaceBody" ):
                listener.enterNameSpaceBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitNameSpaceBody" ):
                listener.exitNameSpaceBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitNameSpaceBody" ):
                return visitor.visitNameSpaceBody(self)
            else:
                return visitor.visitChildren(self)




    def nameSpaceBody(self):

        localctx = alfaParser.NameSpaceBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_nameSpaceBody)
        try:
            self.state = 76
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.policySetDeclaration()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.policyDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 75
                self.nameSpaceDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PolicySetDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.policySetId = None # Token

        def POLICYSET(self):
            return self.getToken(alfaParser.POLICYSET, 0)

        def applyStatement(self):
            return self.getTypedRuleContext(alfaParser.ApplyStatementContext,0)


        def ID(self):
            return self.getToken(alfaParser.ID, 0)

        def EXPORT(self):
            return self.getToken(alfaParser.EXPORT, 0)

        def targetStatement(self):
            return self.getTypedRuleContext(alfaParser.TargetStatementContext,0)


        def conditionStatement(self):
            return self.getTypedRuleContext(alfaParser.ConditionStatementContext,0)


        def policySetBody(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.PolicySetBodyContext)
            else:
                return self.getTypedRuleContext(alfaParser.PolicySetBodyContext,i)


        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.EventContext)
            else:
                return self.getTypedRuleContext(alfaParser.EventContext,i)


        def getRuleIndex(self):
            return alfaParser.RULE_policySetDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicySetDeclaration" ):
                listener.enterPolicySetDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicySetDeclaration" ):
                listener.exitPolicySetDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicySetDeclaration" ):
                return visitor.visitPolicySetDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def policySetDeclaration(self):

        localctx = alfaParser.PolicySetDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_policySetDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.EXPORT:
                self.state = 78
                self.match(alfaParser.EXPORT)


            self.state = 81
            self.match(alfaParser.POLICYSET)
            self.state = 82
            localctx.policySetId = self.match(alfaParser.ID)
            self.state = 83
            self.match(alfaParser.OPEN_BRACE)
            self.state = 85
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.TARGET:
                self.state = 84
                self.targetStatement()


            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.CONDITION:
                self.state = 87
                self.conditionStatement()


            self.state = 90
            self.applyStatement()
            self.state = 94
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << alfaParser.EXPORT) | (1 << alfaParser.POLICYSET) | (1 << alfaParser.POLICY) | (1 << alfaParser.ID))) != 0):
                self.state = 91
                self.policySetBody()
                self.state = 96
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 100
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==alfaParser.ON:
                self.state = 97
                self.event()
                self.state = 102
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 103
            self.match(alfaParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PolicySetBodyContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(alfaParser.ID, 0)

        def policyDeclaration(self):
            return self.getTypedRuleContext(alfaParser.PolicyDeclarationContext,0)


        def policySetDeclaration(self):
            return self.getTypedRuleContext(alfaParser.PolicySetDeclarationContext,0)


        def getRuleIndex(self):
            return alfaParser.RULE_policySetBody

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicySetBody" ):
                listener.enterPolicySetBody(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicySetBody" ):
                listener.exitPolicySetBody(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicySetBody" ):
                return visitor.visitPolicySetBody(self)
            else:
                return visitor.visitChildren(self)




    def policySetBody(self):

        localctx = alfaParser.PolicySetBodyContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_policySetBody)
        try:
            self.state = 108
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,8,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 105
                self.match(alfaParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 106
                self.policyDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 107
                self.policySetDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class PolicyDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.policyId = None # Token

        def POLICY(self):
            return self.getToken(alfaParser.POLICY, 0)

        def applyStatement(self):
            return self.getTypedRuleContext(alfaParser.ApplyStatementContext,0)


        def ID(self):
            return self.getToken(alfaParser.ID, 0)

        def EXPORT(self):
            return self.getToken(alfaParser.EXPORT, 0)

        def targetStatement(self):
            return self.getTypedRuleContext(alfaParser.TargetStatementContext,0)


        def conditionStatement(self):
            return self.getTypedRuleContext(alfaParser.ConditionStatementContext,0)


        def ruleDeclaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.RuleDeclarationContext)
            else:
                return self.getTypedRuleContext(alfaParser.RuleDeclarationContext,i)


        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.EventContext)
            else:
                return self.getTypedRuleContext(alfaParser.EventContext,i)


        def getRuleIndex(self):
            return alfaParser.RULE_policyDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPolicyDeclaration" ):
                listener.enterPolicyDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPolicyDeclaration" ):
                listener.exitPolicyDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitPolicyDeclaration" ):
                return visitor.visitPolicyDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def policyDeclaration(self):

        localctx = alfaParser.PolicyDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_policyDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 111
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.EXPORT:
                self.state = 110
                self.match(alfaParser.EXPORT)


            self.state = 113
            self.match(alfaParser.POLICY)
            self.state = 114
            localctx.policyId = self.match(alfaParser.ID)
            self.state = 115
            self.match(alfaParser.OPEN_BRACE)
            self.state = 117
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.TARGET:
                self.state = 116
                self.targetStatement()


            self.state = 120
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.CONDITION:
                self.state = 119
                self.conditionStatement()


            self.state = 122
            self.applyStatement()
            self.state = 126
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==alfaParser.RULE:
                self.state = 123
                self.ruleDeclaration()
                self.state = 128
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 132
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==alfaParser.ON:
                self.state = 129
                self.event()
                self.state = 134
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 135
            self.match(alfaParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ApplyStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.algorithm = None # Token

        def APPLY(self):
            return self.getToken(alfaParser.APPLY, 0)

        def PEMIT_OVERRIDES(self):
            return self.getToken(alfaParser.PEMIT_OVERRIDES, 0)

        def DENY_OVERRIDES(self):
            return self.getToken(alfaParser.DENY_OVERRIDES, 0)

        def FIRST_APPLICABLE(self):
            return self.getToken(alfaParser.FIRST_APPLICABLE, 0)

        def PERMIT_UNLESS_DENY(self):
            return self.getToken(alfaParser.PERMIT_UNLESS_DENY, 0)

        def DENY_UNLESS_PERMIT(self):
            return self.getToken(alfaParser.DENY_UNLESS_PERMIT, 0)

        def ONLY_ONE_APPLICABLE(self):
            return self.getToken(alfaParser.ONLY_ONE_APPLICABLE, 0)

        def getRuleIndex(self):
            return alfaParser.RULE_applyStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterApplyStatement" ):
                listener.enterApplyStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitApplyStatement" ):
                listener.exitApplyStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitApplyStatement" ):
                return visitor.visitApplyStatement(self)
            else:
                return visitor.visitChildren(self)




    def applyStatement(self):

        localctx = alfaParser.ApplyStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_applyStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 137
            self.match(alfaParser.APPLY)
            self.state = 138
            localctx.algorithm = self._input.LT(1)
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & ((1 << alfaParser.PEMIT_OVERRIDES) | (1 << alfaParser.DENY_OVERRIDES) | (1 << alfaParser.FIRST_APPLICABLE) | (1 << alfaParser.PERMIT_UNLESS_DENY) | (1 << alfaParser.DENY_UNLESS_PERMIT) | (1 << alfaParser.ONLY_ONE_APPLICABLE))) != 0)):
                localctx.algorithm = self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class RuleDeclarationContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser
            self.ruleId = None # Token

        def RULE(self):
            return self.getToken(alfaParser.RULE, 0)

        def effectStatement(self):
            return self.getTypedRuleContext(alfaParser.EffectStatementContext,0)


        def targetStatement(self):
            return self.getTypedRuleContext(alfaParser.TargetStatementContext,0)


        def conditionStatement(self):
            return self.getTypedRuleContext(alfaParser.ConditionStatementContext,0)


        def event(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.EventContext)
            else:
                return self.getTypedRuleContext(alfaParser.EventContext,i)


        def ID(self):
            return self.getToken(alfaParser.ID, 0)

        def getRuleIndex(self):
            return alfaParser.RULE_ruleDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRuleDeclaration" ):
                listener.enterRuleDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRuleDeclaration" ):
                listener.exitRuleDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitRuleDeclaration" ):
                return visitor.visitRuleDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def ruleDeclaration(self):

        localctx = alfaParser.RuleDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ruleDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 140
            self.match(alfaParser.RULE)
            self.state = 142
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.ID:
                self.state = 141
                localctx.ruleId = self.match(alfaParser.ID)


            self.state = 144
            self.match(alfaParser.OPEN_BRACE)
            self.state = 145
            self.effectStatement()
            self.state = 147
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.TARGET:
                self.state = 146
                self.targetStatement()


            self.state = 150
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==alfaParser.CONDITION:
                self.state = 149
                self.conditionStatement()


            self.state = 155
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==alfaParser.ON:
                self.state = 152
                self.event()
                self.state = 157
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 158
            self.match(alfaParser.CLOSE_BRACE)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class EffectStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def PERMIT(self):
            return self.getToken(alfaParser.PERMIT, 0)

        def DENY(self):
            return self.getToken(alfaParser.DENY, 0)

        def getRuleIndex(self):
            return alfaParser.RULE_effectStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEffectStatement" ):
                listener.enterEffectStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEffectStatement" ):
                listener.exitEffectStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitEffectStatement" ):
                return visitor.visitEffectStatement(self)
            else:
                return visitor.visitChildren(self)




    def effectStatement(self):

        localctx = alfaParser.EffectStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_effectStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 160
            _la = self._input.LA(1)
            if not(_la==alfaParser.PERMIT or _la==alfaParser.DENY):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class TargetStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TARGET(self):
            return self.getToken(alfaParser.TARGET, 0)

        def CLAUSE(self, i:int=None):
            if i is None:
                return self.getTokens(alfaParser.CLAUSE)
            else:
                return self.getToken(alfaParser.CLAUSE, i)

        def targetExpression(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(alfaParser.TargetExpressionContext)
            else:
                return self.getTypedRuleContext(alfaParser.TargetExpressionContext,i)


        def getRuleIndex(self):
            return alfaParser.RULE_targetStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterTargetStatement" ):
                listener.enterTargetStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitTargetStatement" ):
                listener.exitTargetStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitTargetStatement" ):
                return visitor.visitTargetStatement(self)
            else:
                return visitor.visitChildren(self)




    def targetStatement(self):

        localctx = alfaParser.TargetStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_targetStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 162
            self.match(alfaParser.TARGET)
            self.state = 165 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 163
                self.match(alfaParser.CLAUSE)
                self.state = 164
                self.targetExpression(0)
                self.state = 167 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==alfaParser.CLAUSE):
                    break

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx

    class ConditionStatementContext(ParserRuleContext):

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def CONDITION(self):
            return self.getToken(alfaParser.CONDITION, 0)

        def conditionExpression(self):
            return self.getTypedRuleContext(alfaParser.ConditionExpressionContext,0)


        def getRuleIndex(self):
            return alfaParser.RULE_conditionStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConditionStatement" ):
                listener.enterConditionStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConditionStatement" ):
                listener.exitConditionStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConditionStatement" ):
                return visitor.visitConditionStatement(self)
            else:
                return visitor.visitChildren(self)




    def conditionStatement(self):
